[tool.poetry]
name = "url_parse"
version = "0.1.0"
description = "Exercise for make abstractions for url manipulating"
authors = ["Mikhail Davydov <mdavydov83@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
